# GraphicsInterface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: GraphicsInterface.h
include/GraphicsInterface/: GraphicsInterface.h  gi_glfw.h  gi_glm.h  gi_imgui.h  gi_stb_image_write.h  gl_glfw.h  ui_imgui.h
src/wrapper/: gi_stb_image_write.cpp
src/wrapper/stb/: gi_stb_image.cpp
